    [+] Added Task::setTaskName().
    [+] New FileLocker class.
    [+] Added ObjectManager::constructPropertyFromSpecification().
    [+] Added ObjectManager::constructDefaultPropertiesOnObject().
    [+] Added ObjectManager::setSharedProperty(QObject*,PropertySpecification).
    [+] Added Observer::setMonitorSubjectModificationState() and Observer::monitorSubjectModificationState().
    [+] Added ContextManager::unregisterContext().

    [#] IFactoryProvider::providedFactoryTags() got a new OK parameter.
    [#] Renamed FileUtils::textFileHashCode() to FileUtils::fileHashCode() since it can now calculate has codes for both text and binary files.
    [#] Replaced FileUtils::compareTextFiles() and FileUtils::compareBinaryFiles() with a single FileUtils::compareFiles() function.
    [#] QtilitiesProcess's constructor got a new read_process_buffers parameter.
    [#] All functions on QtilitiesFileInfo are now available under linux as well.
    [#] QtilitiesProcess will no longer try to execute processes for which the executable does not exist.
    [#] Observer::accessMode() optimized which results in significant increases in tree building.
    [#] Task::setParentTask() does not allow you to set itself as a parent anymore.
    [#] Observer::subjectDisplayedNameInContext() got new parameter to indicate if the qti_prop_DISPLAYED_ALIAS_MAP property must be checked.
    [#] Improved log messages in Core::Task::completeTask(), they now include the elapsed time of the task.
    [#] FileUtils's constructor now has a new parameter which can be used to disable task registration during construction.
    [#] FileUtils::findFilesUnderDir() can now be used to find directories under a path as well. See updated function docs for details.
    [#] Added QVariant::Brush to QtilitiesProperty::isExportableVariant().
    [#] Moved SubjectTypeFilter::initializeAttachment() to SubjectTypeFilter::evaluateAttachment() since its 
        really only doing an evaluation, to an initialization.