@@ -35,6 +35,8 @@ For comment, queries or bug reports please get in touch.
 
 - Qtilities::Core::FileUtils::toNativeSeparators()
 
+- Qtilities::Core::IContextManager::unregisterContext()
+
 - Qtilities::Core::IFactoryProvider::categoryForTag()
 - Qtilities::Core::IFactoryProvider::tagCategoryMap()
 
@@ -78,6 +80,13 @@ For comment, queries or bug reports please get in touch.
 
 - Qtilities::CoreGui::Interfaces::IConfigPage::configPageInitialize()
 
+- Qtilities::CoreGui::Interfaces::IActionManager::unregisterCommandsForContext()
+
+- Qtilities::CoreGui::ModeManager::activeModeChanged()
+- Qtilities::CoreGui::ModeManager::switchToPreviousMode()
+- Qtilities::CoreGui::ModeManager::previousModeIDs()
+- Qtilities::CoreGui::ModeManager::switchToPreviousModeAction()
+
 - Qtilities::CoreGui::NamingPolicyFilter::subjectNameChanged()
 
 - Qtilities::CoreGui::ObjectDynamicPropertyBrowser::setReadOnly()
@@ -85,7 +94,6 @@ For comment, queries or bug reports please get in touch.
 - Qtilities::CoreGui::ObjectDynamicPropertyBrowser::toggleToolBar()
 - Qtilities::CoreGui::ObjectDynamicPropertyBrowser::isToolBarVisible()
 - Qtilities::CoreGui::ObjectDynamicPropertyBrowser::abstractPropertyBrowser()
-
 
 - Qtilities::CoreGui::ObjectPropertyBrowser::abstractPropertyBrowser()
 
@@ -101,6 +109,8 @@ For comment, queries or bug reports please get in touch.
 - Qtilities::CoreGui::ObserverWidget::view()
 - Qtilities::CoreGui::ObserverWidget::setSearchBoxCheckedItemFilters()
 - Qtilities::CoreGui::ObserverWidget::searchBoxCheckedItemFilters()
+
+- Qtilities::CoreGui::ProxyAction::unregisterContext()
 
 - Qtilities::CoreGui::SideWidgetFileSystem::selectPath()
 
